# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  11 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst_support.py, modules/generic_stage_target.py,
  modules/grp_target.py:
  Apply additional patches from bug 207862 for CONTENTS generation

  10 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/grp/grp-chroot.sh:
  Call setup_myemergeopts after changing clst_FETCH

  10 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/netboot2/netboot2-pkg.sh:
  Remove a bit of unnecessary code

  10 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py, targets/grp/grp-chroot.sh,
  targets/support/chroot-functions.sh:
  Fix some spacing on the -* warning, revert Andrew's last change, since it
  didn't do anything, and clean up the GRP chroot code so it works smarter and
  set clst_FETCH when clst_grp_type is something other than pkgset.

  10 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Don't set --usepkg and --buildpkg when fetching

  07 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Change the warning thrown into make.conf when someone uses LDFLAGS so it is
  less confusing.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Merged ChangeLog.old and ChangeLog and added a note for myself to fix up the
  boot/kernel/${kname}/config copying code in generic_stage_target.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Make sure we don't give genkernel a --kernel-config if it isn't set in the
  spec.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/generic_stage_target.py, targets/support/kmerge.sh,
  targets/support/pre-kmerge.sh:
  Changed boot/kernel/${kname}/config and boot/kernel/${kname}/sources to be
  valid, rather than required, changed clst_ksource to default to